##Text encoding: utf-8

2009-08-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fixed some fragment related issues.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/fragment.h: ditto.
	* libs/gcp/text-object.cc: ditto.
	* libs/gcp/text-object.h: ditto.
	* libs/gcp/text.cc: ditto.
	* libs/gcu/crystaldoc.cc: ditto.
	* libs/gcu/spacegroup.cc: fixed transforms iterations so that the iterator
	points to the current element, not the next one.
	* plugins/loaders/cif/cif.cc: crystal export to cif completed.
	* plugins/loaders/cml/cml.cc: crystal export to cml completed.

2009-08-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: removed an obsolete FIXME.
	* libs/gcp/fragment.cc: more work on charges.
	* libs/gcp/fragment.h: ditto.
	* libs/gcp/text-object.cc: ditto.
	* libs/gcu/atom.cc: more work on cif and cml export.
	* libs/gcu/crystalatom.cc: ditto.
	* libs/gcu/crystalatom.h: ditto.
	* libs/gcu/crystaldoc.cc: ditto.
	* libs/gcu/crystaldoc.h: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* plugins/loaders/cml/cml.cc: ditto.
	* programs/crystal/atomsdlg.cc: ditto.
	* programs/crystal/document.cc: ditto.

2009-08-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.cc: add TextTag::Restrict to avoid overlapping tags.
	* libs/gccv/text-tag.h: ditto.
	* libs/gccv/text.cc: use TextTag::Restrict when inserting a new tag.
	* libs/gcp/fragment.cc: allow a charge after a stoichiometry coefficient.
	* libs/gcp/fragment.h: add TextTag::Restrict support for charges and
	stoichiometry.

2009-08-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: some work on charges.
	* libs/gcu/crystaldoc.cc: start work on cif export.
	* libs/gcu/crystaldoc.h: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.

2009-08-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fix runs evaluation.